<resources>
    <string name="app_name">GameNova</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="terminos">Aceptar términos y condiciones</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicio">¡Bienvenido a GameNova! Estamos felices de verte por aquí.</string>
    <string name="registrate">Registrate</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="no_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="no_cuenta">¿Aún no tienes una cuenta? Únete aquí</string>
    <string name="comenzar">Comenzar</string>
    <string name="descripcion_establecer">Por favor ingresa tu correo electrónico registrado, en unos segundos aparecerá tu contraseña.</string>
    <string name="correo_recuperacion">Introduce tu correo electrónico</string>
    <string name="solicitud">Enviar solicitud</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="perfil">Perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="inicio2">Inicio</string>
    <string name="ajustesPerfil">Ajustes de perfil</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar cambios</string>
    <string name="productos_disponibles">Productos disponibles</string>
    <string name="agregar_producto_admin">Agregar Producto (Admin)</string>
    <string name="nombre_producto">Nombre del Producto</string>
    <string name="precio">$0.00</string>
    <string name="descripcion_producto">Descripción del producto...</string>
    <string name="disponible">Disponible</string>
    <string name="agregar_carrito">Agregar al carrito</string>
    <string name="editar_producto">Editar</string>
    <string name="eliminar_producto">Eliminar</string>
    <string name="panel_administracion">Panel de Administración</string>
    <string name="gestionar_usuarios">Gestionar Usuarios</string>
    <string name="gestionar_productos">Gestionar Productos</string>
    <string name="ver_reportes">Ver Reportes</string>
    <string name="carrito_compras">Carrito de Compras</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="tiendas_cercanas">Tiendas Cercanas</string>
    <string name="comprar_ahora">Comprar ahora</string>
    <string name="probar_demo">Probar demo</string>
    <string name="volver">Volver</string>
    <string name="en_stock">En stock</string>
    <string name="categorias">Categorias</string>
    <string name="ofertas">Ofertas</string>
    <string name="historial">Historial</string>
    <string name="saldo">Saldo</string>
    <string name="añadir_producto">Añadir producto</string>
    <string name="editar_producto2">Editar producto</string>
    <string name="ver_producto">Ver producto</string>
    <string name="eliminar_producto2">Eliminar producto</string>
    <string name="configuracion_productos">Configuración de productos</string>
    <string name="fontibon">GameNova Fontibón</string>
    <string name="direccion1">Carrera 81b #19b-50</string>
    <string name="suba">GameNova Suba</string>
    <string name="direccion2">Calle 129f #123-30</string>
    <string name="numero_telefono">3094753663</string>
    <string name="eliminar">Eliminar</string>
    <string name="tiendas_cercanas2">Tiendas cercanas</string>
</resources>