<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/inicio2" />

        <item
            android:id="@+id/categorias"
            android:title="@string/categorias"/>

        <item
            android:id="@+id/ofertas"
            android:title="@string/ofertas"/>

        <item
            android:id="@+id/historial"
            android:title="@string/historial"/>

        <item
            android:id="@+id/saldo"
            android:title="@string/saldo"/>

        <item
            android:id="@+id/tiendas"
            android:title="@string/tiendas_cercanas2"/>

        <item
            android:id="@+id/action_profile"
            android:title="@string/perfil"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/ajustes" />
    </group>
</menu>