<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTituloAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracion_productos"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnAñadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadir_producto" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_producto2" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_producto" />

    <Button
        android:id="@+id/btnEliminarProducto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_producto2" />

</LinearLayout>