<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="127dp"
                android:layout_height="139dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/nombreApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/open_sans_extrabold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="34sp"/>
        </LinearLayout>


        <EditText
            android:id="@+id/etNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:padding="12dp"
            android:hint="@string/nombres"
            android:inputType="textPersonName"/>


        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:padding="12dp"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"/>


        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:padding="12dp"
            android:hint="@string/telefono"
            android:inputType="phone"/>


        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:padding="12dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:padding="12dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"/>


        <EditText
            android:id="@+id/etConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:padding="12dp"
            android:hint="@string/confirmar"
            android:inputType="textPassword"/>


        <CheckBox
            android:id="@+id/aceptarTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminos"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="16dp"/>


        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/registrarse"
            android:fontFamily="sans-serif-black"
            android:textSize="25sp"/>


        <TextView
            android:id="@+id/tienesCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_cuenta"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</ScrollView>
