<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panel_administracion"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnGestionUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gestionar_usuarios"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnGestionProductos"
        android:textColor="@color/black"
        android:backgroundTint="@color/cyan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gestionar_productos"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnReportes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="@color/cyan"
        android:text="@string/ver_reportes" />

</LinearLayout>
