<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@android:color/white"
    android:elevation="2dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/imgProducto2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="12dp">

        <TextView
            android:id="@+id/txtNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_producto"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtPrecioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/txtDisponibilidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_stock" />

        <Button
            android:id="@+id/btnEliminarProducto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"/>
    </LinearLayout>

</LinearLayout>