<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="216dp"
            android:layout_height="201dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/nombreApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/inicio"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ingresar"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/cyan"
            android:fontFamily="sans-serif-black"
            android:text="@string/inicio_sesion"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/registrarse"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
