<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Logo + nombre app en fila -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="151dp"
                android:layout_height="161dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/nombreApp"
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/open_sans_extrabold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="28sp" />
        </LinearLayout>

        <!-- Mensaje instructivo -->
        <TextView
            android:id="@+id/instructivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/descripcion_establecer"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/correo_recuperacion"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="@android:drawable/edit_text"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <Button
            android:id="@+id/solicitud"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/solicitud"
            android:textSize="20sp" />

        <Button
            android:id="@+id/volver"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/volver"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>

