<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/ajustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/ajustesPerfil"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:layout_marginTop="32dp" />

        <!-- Foto de perfil -->
        <ImageView
            android:id="@+id/fotoPerfil"
            android:layout_width="200dp"
            android:layout_height="213dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_profile_image" />

        <!-- Nombres -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/nombres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombres"
                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>

        <!-- Apellidos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/apellidos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apellidos"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <!-- Teléfono -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/telefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <!-- Correo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/correo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="48dp">


            <Button
                android:id="@+id/editarPerfil"
                android:layout_width="114dp"
                android:layout_height="53dp"
                android:backgroundTint="@color/cyan"
                android:text="@string/editar"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


